--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -115,6 +115,9 @@
 								    <div class="item">
 								      <button class="stack_btn" data-remodal-target="modal3"><img src="img/star_clothes-min.jpg"  class="img-responsive" alt="star clothes"></button>
 								    </div>
+								    <div class="item">
+								      <button class="stack_btn" data-remodal-target="modal4"><img src="img/poznan-min1.jpg"  class="img-responsive" alt="poznan"></button>
+								    </div>
 							  	</div>
 							</div>
 	      			</div>
@@ -139,6 +142,12 @@
 			    <button data-remodal-action="close" class="remodal-close"></button>
 			    <img src="./img/omnicore_photo.jpg" alt="">
 			    <p>If you want to see the code, visit my <a href="https://github.com/fedorenkos/star_clothes">Github account</a></p>
+			    <button data-remodal-action="confirm" class="remodal-confirm">OK</button>
+			</div>
+			<div class="remodal modal4" data-remodal-id="modal4" data-remodal-options="hashTracking: false">
+			    <button data-remodal-action="close" class="remodal-close"></button>
+			    <img src="./img/poznan-min.jpg" alt="">
+			    <p>If you want to see the code, visit my <a href="https://github.com/fedorenkos/poznan">Github account</a></p>
 			    <button data-remodal-action="confirm" class="remodal-confirm">OK</button>
 			</div>
 <!--end remodal-->			
